# zatca_update

./: .gitignore  ZATCA_PHASE2_PLAN.md  dev.bat  test.csr
app/: README.md  docker-compose.yml
app/backend/: .env.example  pyproject.toml
app/backend/alembic/: env.py
app/backend/alembic/versions/: 0001_initial_schema.py  0002_compliance_passed_at.py  0003_catalog.py  0004_tenant_queue_settings.py  0005_tenant_queue_schedule.py  0006_tenant_queue_mode.py  0007_tenant_business_profile.py  0008_tenant_currencies_orgs_branches.py  0009_tenant_user_default_branch.py  0010_csid_is_dev_flag.py  0011_user_preferences.py
app/backend/app/: config.py  deps.py  events.py  main.py  redis_client.py  security.py
app/backend/app/api/v1/: auth.py  catalog.py  events.py  invoices.py  onboarding.py  settings.py  tenant_users.py
app/backend/app/db/: base.py
app/backend/app/db/models/: __init__.py  catalog.py  csid.py  invoice.py  tenant.py  webhook.py
app/backend/app/scripts/: generate_signed_set.py  seed.py
app/backend/app/workers/: arq_worker.py  inproc_tick.py
app/backend/app/zatca/: canonicalize.py  client.py  csr.py  demo.py  hash.py  keys.py  pipeline.py  qr.py  sign.py  submitter.py  ubl_builder.py  validate.py
app/backend/tests/: conftest.py  test_compliance_e2e.py  test_csr.py  test_demo.py  test_hash_all_samples.py  test_hash_known_vector.py  test_pipeline.py  test_qr_tlv.py  test_sign_known_vector.py  test_ubl_builder.py  test_zatca_client_routing.py
app/frontend/: next.config.ts  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
(+57 files in other folders)
