[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[project]
name = "zatca-phase2-backend"
version = "0.1.0"
description = "ZATCA Phase 2 multi-tenant e-invoicing backend (Java-free)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=43.0.0",
    "lxml>=5.3.0",
    "qrcode[pil]>=8.0",
    "saxonche>=12.5.0",
    "httpx>=0.28.0",
    "arq>=0.26.3",
    "redis>=5.2.0",
    "limits>=3.13.0",
    "python-multipart>=0.0.20",
    "email-validator>=2.2.0",
    "sse-starlette>=2.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.1",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
